--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -39,8 +39,10 @@ jobs:
     environment: ${{ inputs.environment }}
 
     steps:
-      - name: Checkout
+      - name: Checkout terraform-modules
         uses: actions/checkout@v4
+        with:
+          repository: carlssonk/terraform-modules
       
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
