CICD: add flag - terraform workspace select -or-create

--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -73,7 +73,7 @@ jobs:
         if: steps.check_backend.outputs.backend_exists == 'false'
         run: |
           terraform init
-          terraform workspace select ${{ inputs.environment }} 2>/dev/null || terraform workspace new ${{ inputs.environment }}
+          terraform workspace select -or-create ${{ inputs.environment }}
           terraform apply -auto-approve
         working-directory: ./bootstrap/setup-backend
 
