--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -17,7 +17,7 @@ on:
         required: true
       tf_root_directory:
         type: string
-        description: "Terraform root directory (e.g., ./environments/prod)"
+        description: "Terraform root directory (e.g., ./environments/production)"
         required: true
       terraform_version:
         type: string
