--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
       id-token: write
       contents: write
     steps:
-      - name: Checkout terraform-modules
+      - name: Checkout branch
         uses: actions/checkout@v4
 
       - name: Configure AWS Credentials (OIDC)
