--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -45,7 +45,7 @@ jobs:
       id-token: write
       contents: write
     steps:
-      - name: Checkout terraform-modules
+      - name: Checkout branch
         uses: actions/checkout@v4
 
       - name: Configure AWS Credentials (OIDC)
