--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -83,7 +83,7 @@ jobs:
           TFVARS_FILE="${{ inputs.environment }}.tfvars"
           VAR_FILE_FLAG=""
           if [ -f "$TFVARS_FILE" ]; then
-            VAR_FILE_FLAG="-var-file='$TFVARS_FILE'"
+            VAR_FILE_FLAG="-var-file=$TFVARS_FILE"
           fi
           
           if [ "${{ inputs.action }}" = "plan" ]; then
