--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -78,7 +78,7 @@ jobs:
           TFVARS_FILE="${{ inputs.environment }}.tfvars"
           VAR_FILE_FLAG=""
           if [ -f "$TFVARS_FILE" ]; then
-            VAR_FILE_FLAG="-var-file='$TFVARS_FILE'"
+            VAR_FILE_FLAG="-var-file=$TFVARS_FILE"
           fi
           
           terraform destroy -auto-approve $VAR_FILE_FLAG
