--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,11 @@ on:
         description: "Terraform version to use"
         required: false
         default: "1.9.7"
+      state_key:
+        type: string
+        description: "Terraform state file"
+        required: false
+        default: "terraform.tfstate"
       action:
         type: string
         description: "Terraform action to perform: plan or apply"
@@ -72,7 +77,7 @@ jobs:
             -backend-config="region=${{ inputs.aws_region }}" \
             -backend-config="bucket=${{ inputs.aws_account_id }}-terraform-state" \
             -backend-config="dynamodb_table=${{ inputs.aws_account_id }}-terraform-lock-table" \
-            -backend-config="key=terraform.tfstate"
+            -backend-config="key=${{ inputs.state_key }}"
         working-directory: ${{ inputs.tf_root_directory }}
 
       - name: Terraform ${{ inputs.action == 'plan' && 'Plan' || 'Apply' }}
