--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,19 +37,20 @@ on:
     secrets:
       CLOUDFLARE_API_TOKEN:
         required: false
-  
-concurrency: 
-  group: ${{ inputs.environment }}
+
+concurrency:
+  group: terraform-${{ inputs.environment }}-${{ inputs.state_key }}
   cancel-in-progress: false
 
 env:
-  TF_VAR_cloudflare_api_token: ${{ secrets.CLOUDFLARE_API_TOKEN }}
   TF_VAR_aws_region: ${{ inputs.aws_region }}
+  TF_VAR_cloudflare_api_token: ${{ secrets.CLOUDFLARE_API_TOKEN }}
 
 jobs:
   terraform-deploy:
-    name: Deploy Infrastructure
+    name: ${{ inputs.action == 'plan' && 'Plan' || 'Deploy' }} Infrastructure - ${{ inputs.environment }}
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     environment: ${{ inputs.environment }}
     permissions:
       id-token: write
@@ -80,6 +81,10 @@ jobs:
             -backend-config="key=${{ inputs.state_key }}"
         working-directory: ${{ inputs.tf_root_directory }}
 
+      - name: Terraform Validate
+        run: terraform validate
+        working-directory: ${{ inputs.tf_root_directory }}
+
       - name: Terraform ${{ inputs.action == 'plan' && 'Plan' || 'Apply' }}
         run: |
           terraform workspace select -or-create ${{ inputs.environment }}
@@ -89,11 +94,22 @@ jobs:
           VAR_FILE_FLAG=""
           if [ -f "$TFVARS_FILE" ]; then
             VAR_FILE_FLAG="-var-file=$TFVARS_FILE"
+            echo "Using tfvars file: $TFVARS_FILE"
+          else
+            echo "No tfvars file found for ${{ inputs.environment }}"
           fi
           
           if [ "${{ inputs.action }}" = "plan" ]; then
-            terraform plan $VAR_FILE_FLAG
+            echo "Running terraform plan..."
+            terraform plan $VAR_FILE_FLAG -no-color
           else
-            terraform apply -auto-approve $VAR_FILE_FLAG
+            echo "Running terraform apply..."
+            terraform apply -auto-approve $VAR_FILE_FLAG -no-color
           fi
         working-directory: ${{ inputs.tf_root_directory }}
+
+      - name: Terraform Output
+        if: inputs.action == 'apply'
+        run: terraform output -no-color
+        working-directory: ${{ inputs.tf_root_directory }}
+        continue-on-error: true
