--- a/.github/actions/deploy/action.yml
+++ b/.github/actions/deploy/action.yml
@@ -36,6 +36,9 @@ inputs:
 runs:
   using: 'composite'
   steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+
     - name: Configure AWS Credentials (OIDC)
       uses: aws-actions/configure-aws-credentials@v4
       with:
